# jarvis

./: .dockerignore  .env.local  .gitignore  Dockerfile  Makefile  README.md  README.rst  alembic.ini  docker-compose.yml  logging.conf  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 2020-03-31_9bb25c526189_create_user_table.py
frontend/: .dockerignore  .env  .eslintrc  Dockerfile  package.json
frontend/src/: App.js
frontend/src/components/TableForm/: TableForm.js  index.js
jarvis/: main.py
jarvis/api/: __init__.py
jarvis/api/v1/: __init__.py  admin_endpoint.py  endpoint.py  user_endpoint.py
jarvis/core/: config.py  models.py  text_responses.py  utils.py
jarvis/crud/: __init__.py  items.py  shoopy_cart.py
jarvis/db/: __init__.py  db_utils.py
jarvis/lib/: __init__.py  twilio_helper.py
jarvis/models/: __init__.py  beer.py  cart_item.py  liquor.py  shopping_cart.py  wine.py
jarvis/postgresql/: postmaster.pid
jarvis/postgresql/base/1/: 1247_vm  1249  1249_vm  1255  1259  1259_vm  12957  175  2605_vm  2608  2610_vm  2618  2653  2657  2658  2659  2662  2664  2679  2691  2702  2704  2833  3085  3164  3440  3468
jarvis/postgresql/base/13116/: 1247  1259  12952  2337  2606  2607_vm  2609  2610  2618_vm  2651  2654  2663  2669  2673  2674  2675  2678  2680  2683  2684  2686  2687  2693  2703  2754  2755  3455
jarvis/postgresql/global/: 1260  1262  2671  2672  2676  2677  6115  pg_control  pg_internal.init
jarvis/postgresql/pg_stat_tmp/: db_0.stat  db_13117.stat  db_16384.stat  global.stat
tests/: test_jarvis_v2.py
(+77 files in other folders)
