[tool.poetry]
name = "jarvis_v2"
version = "0.1.0"
description = ""
authors = ["christian-miljkovic <christian.miljkovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
