[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["christian-miljkovic <christian.miljkovic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"
databases = "0.2.2"
uvicorn = "^0.8.2"
requests = "^2.31"
alembic = "^1.4.2"
asyncpg = "^0.18.3"
psycopg2-binary = "^2.8.4"
gunicorn = "^20.0.4"
twilio = "^6.38.0"
python-multipart = "^0.0.5"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
pep8 = "^1.7"
autopep8 = "^1.4"
watch = "^0.2.7"
pylint = "^2.4.4"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
